external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_struct_explicit_type_arg_assign.move
module 0x42::M {
    public struct Foo<T>(T) has drop;

    fun should_fail() {
        Foo <u64>(_) = Foo(0);
    }
}
